Refactor OutParser to parse log and out files

--- a/server/config.js.template
+++ b/server/config.js.template
@@ -390,7 +390,7 @@ module.exports = {
 
         // The data stores need a copy of a couple of properties from the parent config so attach those
         this.dataStoreOptions['dataDir'] = this.dataDir;
-        this.dataStoreOptions['dataBaseUrl'] = this.appServerOptions['hostBaseUrl']
+        this.dataStoreOptions['dataBaseUrl'] = this.hostBaseUrl;
         if (this.port && this.port != 80) this.dataStoreOptions['dataBaseUrl'] += ':' + this.port;
         this.dataStoreOptions['dataBaseUrl'] += '/data';
         this.dataStoreOptions['slackWebHookURL'] = this.slackWebHookURL;
