--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.3",
     "cradle": "^0.7.1",
+    "csv": "^5.3.1",
     "express": "^4.16.3",
     "express-csv": "^0.6.0",
     "ftp": "0.3.1",
