--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "supervisor": "0.5.3"
   },
   "devDependencies": {
+    "eslint": "^7.1.0",
     "grunt": "^0.4.5",
     "jest": "^24.9.0",
     "mocha": "*",
